<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_logs"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_assessment_24"
        android:title="@string/text_logs"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stats"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/text_stats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/text_search"

        app:showAsAction="ifRoom" />
</menu>